--- a/snapface/src/app/face-snap/face-snap.component.html
+++ b/snapface/src/app/face-snap/face-snap.component.html
@@ -1,1 +1,8 @@
-<p>face-snap works!</p>
+<div class="face-snap-card">
+  <h2>{{ title }}</h2>
+  <p>Mis en ligne le {{ createDate }}</p>
+  <img [src]="img" [alt]="title" />
+  <p>{{ description }}</p>
+  <p>👌{{ snaps }}</p>
+  <button (click)="onAddSnap()">Oh Snap!</button>
+</div>
