Changes to be committed: 	modified:   snapface/src/app/app.component.html 	modified:   snapface/src/app/app.component.ts 	modified:   snapface/src/app/face-snap/face-snap.component.html 	modified:   snapface/src/app/face-snap/face-snap.component.ts 	new file:   snapface/src/app/models/face-snap.model.ts

--- a/snapface/src/app/face-snap/face-snap.component.html
+++ b/snapface/src/app/face-snap/face-snap.component.html
@@ -1,8 +1,8 @@
 <div class="face-snap-card">
-  <h2>{{ title }}</h2>
-  <p>Mis en ligne le {{ createDate }}</p>
-  <img [src]="img" [alt]="title" />
-  <p>{{ description }}</p>
-  <p>👌{{ snaps }}</p>
-  <button (click)="onAddSnap()">Oh Snap!</button>
+  <h2>{{ faceSnap.title }}</h2>
+  <p>Mis en ligne le {{ faceSnap.createDate }}</p>
+  <img [src]="faceSnap.img" [alt]="faceSnap.title" />
+  <p>{{ faceSnap.description }}</p>
+  <p>👌{{ faceSnap.snaps }}</p>
+  <button (click)="toggle()">{{ ohsnap }}</button>
 </div>
