--- a/snapface/src/app/app.component.html
+++ b/snapface/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-face-snap></app-face-snap>
+<app-face-snap [faceSnap]="mySnap"></app-face-snap>
+<app-face-snap [faceSnap]="myLastSnap"></app-face-snap>
+<app-face-snap [faceSnap]="myOtherSnapp"></app-face-snap>
