ajout de plusieurs images et optimisation Changes to be committed: 	modified:   snapface/src/app/app.component.html 	modified:   snapface/src/app/app.component.ts 	modified:   snapface/src/app/face-snap/face-snap.component.html 	modified:   snapface/src/app/face-snap/face-snap.component.ts 	modified:   snapface/src/app/models/face-snap.model.ts

--- a/snapface/src/app/app.component.html
+++ b/snapface/src/app/app.component.html
@@ -1,3 +1,1 @@
-<app-face-snap [faceSnap]="mySnap"></app-face-snap>
-<app-face-snap [faceSnap]="myLastSnap"></app-face-snap>
-<app-face-snap [faceSnap]="myOtherSnapp"></app-face-snap>
+<app-face-snap *ngFor="let faceSnap of faceSnaps"></app-face-snap>
